# backend

./: .env  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.yml
backend/: backend.dockerfile  celeryworker.dockerfile
backend/app/: pyproject.toml
backend/app/alembic/versions/: d4867f3a4c0a_first_revision.py  ed83b9d9ba93_01_create_new_table_v1.py
backend/app/app/: http_utils.py  main.py  send_telegram.py  utils.py  worker.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: headline.py  sentiment.py  token.py  userfavourite.py  utils.py
backend/app/app/core/: celery_app.py  config.py
backend/app/app/crud/: __init__.py  crud_article.py  crud_coin.py  crud_headline.py  crud_headline_favourite.py  crud_sentiment.py  crud_user_favourite.py
backend/app/app/db/: init_db.py
backend/app/app/models/: article.py  details.py  favourites.py  headlines.py  headlines_favourites.py  sentiments.py  sources.py  user.py  user_favourites.py
backend/app/app/my_telegram/: __init__.py  telegram_sender.py
backend/app/app/schemas/: __init__.py  article.py  coin_token.py  headline.py  headline_favourite.py  msg.py  sentiment.py  user.py  user_favourites.py
frontend/: .env
scripts/: build.sh  run.sh  stop.sh
